fix position mobile

--- a/src/style/_settings.scss
+++ b/src/style/_settings.scss
@@ -23,7 +23,7 @@ $red: rgb(253, 87, 87);
   }
 }
 html {
-  scroll-behavior: unset;
+  overflow: hidden;
 }
 a,
 a:visited {
@@ -39,7 +39,6 @@ body {
   @media screen and (max-width: 430px) {
     position: relative;
     max-width: 100vw;
-    overflow-y: initial;
   }
 }
 .main {
