--- a/src/style/pages/_project.scss
+++ b/src/style/pages/_project.scss
@@ -91,6 +91,7 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
+        margin-top: 10px;
       }
 
       h1 {
@@ -182,6 +183,9 @@
       top: 50%;
       left: 50%;
 
+      @media screen and (max-width: 1100px) {
+        transform: translate(-50%, -50%);
+      }
       .img-container {
         border-radius: 5px;
         box-shadow: 0px 2px 4px rgba(51, 51, 51, 0.26);
@@ -193,7 +197,6 @@
         @media screen and (max-width: 1100px) {
           height: 200px;
           width: 400px;
-
           margin-top: 10%;
         }
 
@@ -203,8 +206,6 @@
 
         @media screen and (max-width: 450px) {
           margin: 0 auto;
-          margin-top: 15%;
-
           height: 200px;
           width: 300px;
         }
